--- a/rsc/less/bootstrap-evoskins.less
+++ b/rsc/less/bootstrap-evoskins.less
@@ -734,6 +734,7 @@ div.edit_toolbars, div.message_toolbars {
 		margin-left: 0;
 	}
 	.btn {
+		margin-top: 0;
 		margin-bottom: 2px;
 	}
 	.btn-toolbar-title {
