--- a/skins/bootstrap_main_skin/style.css
+++ b/skins/bootstrap_main_skin/style.css
@@ -456,8 +456,7 @@ body.pictured .secondary_area .widget_core_org_members a.user_link:hover {
   color: #ffffff;
   text-align: center;
   opacity: 0.5;
-  -webkit-transition: 0.1s all;
-          transition: 0.1s all;
+  transition: 0.1s all;
   position: relative;
   left: -50%;
 }
